WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65600
[GTK] Install web and plugin processes in libexecdir instead of bindir
https://bugs.webkit.org/show_bug.cgi?id=65600
Summary
[GTK] Install web and plugin processes in libexecdir instead of bindir
Carlos Garcia Campos
Reported
2011-08-03 02:28:05 PDT
I think processes should be installed in libexecdir since we are a library not a program.
Attachments
Patch
(5.32 KB, patch)
2011-08-03 02:37 PDT
,
Carlos Garcia Campos
mrobinson
: review+
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-08-03 02:37:38 PDT
Created
attachment 102757
[details]
Patch An env var is used to allow MiniBrowser and unit tests (when we add them) to use web and plugin processes without having to install them.
Martin Robinson
Comment 2
2011-08-03 03:27:50 PDT
Comment on
attachment 102757
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102757&action=review
> Source/WebKit2/UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp:80 > - GOwnPtr<gchar> binaryPath(g_build_filename(applicationDirectoryPath().data(), > + const gchar* execDirectory = g_getenv("WEBKIT_EXEC_PATH"); > + GOwnPtr<gchar> binaryPath(g_build_filename(execDirectory ? execDirectory : LIBEXECDIR,
Eventually we're just going to need to break down and write a cross-platform method to get the current binary path.
Carlos Garcia Campos
Comment 3
2011-08-03 03:50:46 PDT
Comment on
attachment 102757
[details]
Patch I've noticed this patch breaks the tests, I'm working on a new patch.
Carlos Garcia Campos
Comment 4
2011-08-03 05:20:37 PDT
Committed
r92273
: <
http://trac.webkit.org/changeset/92273
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug