[GTK] Install web and plugin processes in libexecdir instead of bindir https://bugs.webkit.org/show_bug.cgi?id=65600

Reviewed by Martin Robinson.

.:

* GNUmakefile.am: Initialize libexec_PROGRAMS, only used by
WebKit2 in this moment.

Source/WebKit2:

Launch processes from libexecdir or WEBKIT_EXEC_PATH
environment variable when it's set. This variable will be used by
MiniBrowser and unit tests to find processes without having to
install them.

* GNUmakefile.am:
* UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp:
(WebKit::ProcessLauncher::launchProcess):

Tools:

Set WEBKIT_EXEC_PATH environment variable to use web and plugin
process from current directory instead of the intalled ones.

* MiniBrowser/gtk/GNUmakefile.am:
* MiniBrowser/gtk/main.c:
(main):
* WebKitTestRunner/GNUmakefile.am:
* WebKitTestRunner/gtk/main.cpp:
(main):

Canonical link: https://commits.webkit.org/81411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92273 268f45cc-cd09-0410-ab3c-d52691b4dbfc